// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateWorkerWrapper > should handle empty steps array > empty-steps 1`] = `
"import React from 'react';


const stepHandlers = {

};

export default {
  async fetch(request) {
    try {
      if (request.method !== 'POST') {
        return new Response(
          JSON.stringify({ error: 'Method not allowed' }),
          { 
            status: 405,
            headers: { 'Content-Type': 'application/json' }
          }
        );
      }

      const url = new URL(request.url);
      const stepName = url.searchParams.get('step') || 
                       request.headers.get('X-Step-Name');
      
      if (!stepName) {
        return new Response(
          JSON.stringify({ 
            error: 'Missing step name',
            message: 'Provide step name via ?step=<name> query param or X-Step-Name header'
          }),
          { 
            status: 400,
            headers: { 'Content-Type': 'application/json' }
          }
        );
      }

      const step = stepHandlers[stepName];
      if (!step) {
        return new Response(
          JSON.stringify({ 
            error: 'Step not found',
            stepName,
            available: Object.keys(stepHandlers),
            workflowId: 'workflow',
            environmentId: 'env'
          }),
          { 
            status: 404,
            headers: { 'Content-Type': 'application/json' }
          }
        );
      }

      const body = await request.json();
      const { payload = {}, subscriber = {}, context = {}, steps = {} } = body;

      // Call the user's step handler function
      const result = await step.handler({ payload, subscriber, context, steps });

      return new Response(
        JSON.stringify({
          stepId: step.stepId,
          workflowId: step.workflowId,
          subject: result.subject,
          body: result.body,
          environmentId: 'env'
        }),
        {
          status: 200,
          headers: {
            'Content-Type': 'application/json',
          },
        }
      );
    } catch (error) {
      console.error('Error executing step handler:', error);
      
      return new Response(
        JSON.stringify({
          error: 'Step execution failed',
          message: error instanceof Error ? error.message : 'Unknown error',
          workflowId: 'workflow',
          environmentId: 'env'
        }),
        {
          status: 500,
          headers: {
            'Content-Type': 'application/json',
          },
        }
      );
    }
  },
};"
`;

exports[`generateWorkerWrapper > should handle single step > single-step 1`] = `
"import React from 'react';
import stepHandler0, { stepId as stepId0, workflowId as workflowId0 } from './novu/welcome-email.step';

const stepHandlers = {
  'welcome-email': {
    handler: stepHandler0,
    stepId: stepId0,
    workflowId: workflowId0
  }
};

export default {
  async fetch(request) {
    try {
      if (request.method !== 'POST') {
        return new Response(
          JSON.stringify({ error: 'Method not allowed' }),
          { 
            status: 405,
            headers: { 'Content-Type': 'application/json' }
          }
        );
      }

      const url = new URL(request.url);
      const stepName = url.searchParams.get('step') || 
                       request.headers.get('X-Step-Name');
      
      if (!stepName) {
        return new Response(
          JSON.stringify({ 
            error: 'Missing step name',
            message: 'Provide step name via ?step=<name> query param or X-Step-Name header'
          }),
          { 
            status: 400,
            headers: { 'Content-Type': 'application/json' }
          }
        );
      }

      const step = stepHandlers[stepName];
      if (!step) {
        return new Response(
          JSON.stringify({ 
            error: 'Step not found',
            stepName,
            available: Object.keys(stepHandlers),
            workflowId: 'workflow',
            environmentId: 'env'
          }),
          { 
            status: 404,
            headers: { 'Content-Type': 'application/json' }
          }
        );
      }

      const body = await request.json();
      const { payload = {}, subscriber = {}, context = {}, steps = {} } = body;

      // Call the user's step handler function
      const result = await step.handler({ payload, subscriber, context, steps });

      return new Response(
        JSON.stringify({
          stepId: step.stepId,
          workflowId: step.workflowId,
          subject: result.subject,
          body: result.body,
          environmentId: 'env'
        }),
        {
          status: 200,
          headers: {
            'Content-Type': 'application/json',
          },
        }
      );
    } catch (error) {
      console.error('Error executing step handler:', error);
      
      return new Response(
        JSON.stringify({
          error: 'Step execution failed',
          message: error instanceof Error ? error.message : 'Unknown error',
          workflowId: 'workflow',
          environmentId: 'env'
        }),
        {
          status: 500,
          headers: {
            'Content-Type': 'application/json',
          },
        }
      );
    }
  },
};"
`;

exports[`generateWorkerWrapper > should match snapshot 1`] = `
"import React from 'react';
import stepHandler0, { stepId as stepId0, workflowId as workflowId0 } from './novu/welcome-email.step';
import stepHandler1, { stepId as stepId1, workflowId as workflowId1 } from './novu/verify-email.step';

const stepHandlers = {
  'welcome-email': {
    handler: stepHandler0,
    stepId: stepId0,
    workflowId: workflowId0
  },
  'verify-email': {
    handler: stepHandler1,
    stepId: stepId1,
    workflowId: workflowId1
  }
};

export default {
  async fetch(request) {
    try {
      if (request.method !== 'POST') {
        return new Response(
          JSON.stringify({ error: 'Method not allowed' }),
          { 
            status: 405,
            headers: { 'Content-Type': 'application/json' }
          }
        );
      }

      const url = new URL(request.url);
      const stepName = url.searchParams.get('step') || 
                       request.headers.get('X-Step-Name');
      
      if (!stepName) {
        return new Response(
          JSON.stringify({ 
            error: 'Missing step name',
            message: 'Provide step name via ?step=<name> query param or X-Step-Name header'
          }),
          { 
            status: 400,
            headers: { 'Content-Type': 'application/json' }
          }
        );
      }

      const step = stepHandlers[stepName];
      if (!step) {
        return new Response(
          JSON.stringify({ 
            error: 'Step not found',
            stepName,
            available: Object.keys(stepHandlers),
            workflowId: 'onboarding',
            environmentId: 'env-123'
          }),
          { 
            status: 404,
            headers: { 'Content-Type': 'application/json' }
          }
        );
      }

      const body = await request.json();
      const { payload = {}, subscriber = {}, context = {}, steps = {} } = body;

      // Call the user's step handler function
      const result = await step.handler({ payload, subscriber, context, steps });

      return new Response(
        JSON.stringify({
          stepId: step.stepId,
          workflowId: step.workflowId,
          subject: result.subject,
          body: result.body,
          environmentId: 'env-123'
        }),
        {
          status: 200,
          headers: {
            'Content-Type': 'application/json',
          },
        }
      );
    } catch (error) {
      console.error('Error executing step handler:', error);
      
      return new Response(
        JSON.stringify({
          error: 'Step execution failed',
          message: error instanceof Error ? error.message : 'Unknown error',
          workflowId: 'onboarding',
          environmentId: 'env-123'
        }),
        {
          status: 500,
          headers: {
            'Content-Type': 'application/json',
          },
        }
      );
    }
  },
};"
`;
